--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 			<groupId>fr.sii.survival</groupId>
 			<artifactId>survival-core</artifactId>
 			<version>${project.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	
@@ -42,6 +43,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.10.1</version>
 				<configuration>
+					<failOnError>false</failOnError>
 				</configuration>
 			</plugin>
 		</plugins>
