--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
 		<java.version>1.8</java.version>
 		<mockito.version>1.9.5</mockito.version>
 		<junit.version>4.12</junit.version>
-		<nexus.release.url>http://nexus.devoxx.sii.fr/content/repositories/releases</nexus.release.url>
-		<nexus.snapshot.url>http://nexus.devoxx.sii.fr/content/repositories/snapshots</nexus.snapshot.url>
+		<nexus.url>http://nexus.devoxx.sii.fr</nexus.url>
+		<nexus.release.url>${nexus.url}/content/repositories/releases</nexus.release.url>
+		<nexus.snapshot.url>${nexus.url}/content/repositories/snapshots</nexus.snapshot.url>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
@@ -87,6 +88,15 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>sii</id>
+			<name>SII public repository</name>
+			<url>${nexus.url}</url>
+		</repository>
+	</repositories>
+
 
 	<distributionManagement>
 		<repository>
