--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<java.version>1.8</java.version>
 		<mockito.version>1.9.5</mockito.version>
 		<junit.version>4.12</junit.version>
-		<nexus.url>http://nexus.devoxx.sii.fr</nexus.url>
+		<nexus.url>http://nexus.devoxx.sii-ouest.fr</nexus.url>
 		<nexus.release.url>${nexus.url}/content/repositories/releases</nexus.release.url>
 		<nexus.snapshot.url>${nexus.url}/content/repositories/snapshots</nexus.snapshot.url>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
